github 草のテスト

--- a/06_Plan/学習プラン.md
+++ b/06_Plan/学習プラン.md
@@ -8,6 +8,5 @@ estimate1 = 0.5h
 4週間1回のスプリントで区切る。
 スプリントごとに振り返る。タスクの消費時間と進捗を記録する。
 開発タスク中にでた疑問は15分程度調べる。それ以上の学習は、学習projectに起票して学習タスクの日に行う。
-
-
+てすと
 
