いろいろ変更

--- a/05_Others/仕事.md
+++ b/05_Others/仕事.md
@@ -6,6 +6,8 @@
 - 最終的な目的を理解して、成果物に必要な情報を入れる。
 - 調査の成果物は何の調査をしたか、調査した結果はどうなったかを明確にわかりやすく。
 - 作業の証跡と証跡のサマリを作成する。
+# エビデンスを残しながら作業する
+
 # MTGのメモをとり、チーム全体の進捗状況を把握する
 MTGの議事録やメモをmarkdown形式でナレッジとして保存する
 タスクの整合や簡易マニュアルを作成したら、ミーティング後共有する。
